methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:19: error: type mismatch;
 found   : Int(2)
 required: java.awt.Color
  Motif2();avance(4);Motif(2)
                           ^